# Yaohui-Master-Thesis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BaseDef.hpp  GA.hpp  Individual.hpp  Interval.hpp  Mission.hpp  RandomWalk.hpp  Solver.hpp  Station.hpp  Timetable.hpp  TimetableConfig.hpp  TractionCalculator.hpp
src/: GA.cpp  Individual.cpp  Interval.cpp  Mission.cpp  RandomWalk.cpp  Solver.cpp  Station.cpp  Timetable.cpp  TimetableConfig.cpp  TractionCalculator.cpp  TrainTractionCalculation.cpp  main.cpp
